--- a/assignment/src/components/whyPartner.css
+++ b/assignment/src/components/whyPartner.css
@@ -494,6 +494,21 @@
   gap: 1.2rem;
   margin: 2rem 0;
 }
+.founder-image-wrapper{
+  width: 100%;
+  height:100%;
+  border-radius: 50%;
+  display: flex;
+  overflow: hidden;
+  justify-content: center;
+}
+.founder-image-wrapper img{
+  width: 200px;
+  height: 200px;
+   border-radius: 50%;
+  object-fit: cover;
+
+}
 
 .skill-badge {
   padding: 1.2rem 1.5rem;
@@ -782,6 +797,7 @@
   .founder-image-wrapper {
     width: 200px;
     height: 200px;
+    margin-left: 25px;
   }
 }
 
