--- a/assignment/src/components/whyPartner.css
+++ b/assignment/src/components/whyPartner.css
@@ -511,6 +511,12 @@
   object-fit: cover;
 
 }
+.founder-ai-graphic-container1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .skill-badge {
   padding: 1.2rem 1.5rem;
