--- a/assignment/src/components/hero.css
+++ b/assignment/src/components/hero.css
@@ -434,7 +434,31 @@ video {
     margin: 3rem 0;
 }
 
-.cta-btn {
+.cta-btn1{
+    background: linear-gradient(135deg, var(--gold), var(--gold-2));
+    color: var(--dark-text);
+    box-shadow: 0 8px 30px rgba(212, 175, 55, 0.4);
+    border: none;
+    margin-top: 20px;
+
+    padding: 1.2rem 2.5rem;
+    border-radius: 50px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 1.1rem;
+    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: 'Playfair Display', serif;
+    min-width: 250px;
+}
+.centercta{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.cta-btn2{
+    background: linear-gradient(135deg, var(--gold), var(--gold-2));
+    color: var(--dark-text);
+    box-shadow: 0 8px 30px rgba(212, 175, 55, 0.4);
     border: none;
     padding: 1.2rem 2.5rem;
     border-radius: 50px;
@@ -495,6 +519,17 @@ video {
 .quote-text strong {
     color: var(--gold);
     font-size: 1rem;
+}
+.hori{
+    display: flex;
+}
+.horimg{
+    width: 50%;
+    height: auto;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 15px;
+   
 }
 
 /* ===== Geometric Shapes & Animations ===== */
@@ -588,6 +623,7 @@ video {
     right: 30%;
 }
 
+
 /* Connecting lines */
 .geometric-line {
     position: absolute;
@@ -663,6 +699,9 @@ video {
     .credibility-bar {
         gap: 2rem;
     }
+    .cta-btn1{
+         padding: 0.5rem 2rem;
+    }
 
     .vision-points {
         grid-template-columns: 1fr;
@@ -681,6 +720,14 @@ video {
 
     .main-headline {
         font-size: 2.5rem;
+    }
+    .hori{
+        flex-direction: column;
+        align-items: center;
+    }
+    .horimg{
+        width: 100%;
+       
     }
 
     .sub-headline {
